# EVA02

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
src/: logging.cpp  logging.h
test/: test_logging.cpp
